[25.05.16] 자동 배치 로직 구현완료